--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,7 @@ li {
 }
 
 .preview {
-  background-image: url("/assets/img/preview_back.png");
+  background-image: url("../img/preview_back.png");
   background-size: cover;
   font-size: 18px;
   font-weight: bold;
