--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,12 +5,11 @@ body {
   height: 100%;
   width: 100%;
   color: white;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 * {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 a {
@@ -35,44 +34,33 @@ li {
 
 .preview {
   background-image: url("../img/preview_back.png");
-  background-size: cover;
   font-size: 18px;
+  background-size: cover;
   font-weight: bold;
 }
 
 .header {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   padding: 30px 0;
 }
-
 .header__menu {
   margin-left: 65px;
 }
-
 .header__ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 55px;
 }
-
 .preview__text {
   margin-top: 320px;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   padding-bottom: 130px;
 }
-
 .preview__title {
   font-weight: bold;
   font-size: 48px;
   margin-bottom: 10px;
 }
-
 .preview__name {
   font-size: 100px;
   margin-bottom: 50px;
@@ -80,25 +68,14 @@ li {
   color: transparent;
   line-height: 150px;
 }
-
 .preview__player {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
-
 .preview__play {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
-
 .preview__line {
   position: relative;
   width: 100%;
@@ -106,7 +83,6 @@ li {
   height: 2px;
   background-color: white;
 }
-
 .preview__time {
   min-width: 110px;
 }
@@ -117,9 +93,8 @@ li {
   position: absolute;
   width: 30%;
 }
-
 .fully__line::before {
-  content: '';
+  content: "";
   height: 20px;
   background-color: #7A66CC;
   width: 2px;
@@ -130,18 +105,14 @@ li {
 
 .blog {
   margin-bottom: 180px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 30px;
 }
-
 .blog__item {
   position: relative;
   max-width: 350px;
   border-radius: 20px 0px;
 }
-
 .blog__text {
   position: absolute;
   bottom: 0;
@@ -157,76 +128,50 @@ li {
 
 .album {
   margin-bottom: 240px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 .album__content {
   margin-right: 130px;
 }
-
 .album__title {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   margin-bottom: 60px;
 }
-
 .album__logo {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   margin-right: 30px;
 }
-
 .album__logo__text {
   font-weight: 700;
   font-size: 48px;
   line-height: 72px;
 }
-
 .album__text {
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
   opacity: 0.7;
 }
-
 .album__points__container {
   margin-top: 60px;
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[2];
-      grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   gap: 30px;
 }
-
 .album__point {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
-
 .album__images {
   position: relative;
 }
-
 .album__image {
   position: relative;
 }
-
 .album__image__front::after {
-  content: '';
+  content: "";
   background-image: url("../img/album__img_2.png");
   width: 350px;
   height: 400px;
@@ -235,15 +180,10 @@ li {
   left: 95px;
   z-index: -1;
 }
-
 .album__image__front img {
-  -webkit-transform: translate(-30px);
-          transform: translate(-30px);
+  transform: translate(-30px);
 }
-
 .album__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 
@@ -253,7 +193,6 @@ li {
   background: #7A66CC;
   border-radius: 10px 0px;
 }
-
 .point__text {
   margin-left: 20px;
 }
@@ -261,32 +200,25 @@ li {
 .media {
   margin-bottom: 265px;
 }
-
 .media__image {
   position: absolute;
   right: 80px;
   top: 50%;
-  -webkit-transform: translate(0, -50%);
-          transform: translate(0, -50%);
+  transform: translate(0, -50%);
 }
-
 .media__content {
   position: relative;
   border: 1px solid #FFFFFF;
   border-radius: 30px 0px;
   padding: 80px 50px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 .media__text {
   padding-bottom: 25px;
-  border-bottom: 1px solid #ffffffaf;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.6862745098);
   margin-bottom: 25px;
   max-width: 520px;
 }
-
 .media__link {
   font-weight: 700;
   font-size: 18px;
@@ -297,59 +229,35 @@ li {
 .nextmedia {
   margin-bottom: 180px;
 }
-
 .nextmedia__content {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 .nextmedia__left {
   margin-right: 60px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
-
 .nextmedia__right {
   width: 100%;
 }
-
 .nextmedia__follow {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 40px;
   margin-top: 50px;
 }
-
 .nextmedia__player {
   width: 100%;
   margin-top: 60px;
 }
-
 .nextmedia__title {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
-
 .nextmedia__logo {
   margin-right: 30px;
 }
-
 .nextmedia__text {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 
@@ -358,32 +266,20 @@ li {
   height: 510px;
   background: #4f39a7;
   border-radius: 50%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   z-index: -2;
 }
 
 .nd__area {
   width: 472.22px;
   height: 472.22px;
-  background: #937fe285;
+  background: rgba(147, 127, 226, 0.5215686275);
   border-radius: 50%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   z-index: 2;
 }
 
@@ -394,24 +290,17 @@ li {
 .tracks {
   margin-top: 50px;
 }
-
 .tracks__item {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  align-items: flex-end;
   margin-bottom: 20px;
 }
-
 .tracks span {
   font-weight: 700;
   font-size: 14px;
   line-height: 21px;
   opacity: 0.5;
 }
-
 .tracks__name {
   margin-left: 20px;
 }
@@ -421,4 +310,195 @@ li {
   font-size: 24px;
   line-height: 36px;
 }
-/*# sourceMappingURL=style.css.map */
+
+.tours {
+  margin-bottom: 180px;
+}
+.tours__content {
+  display: grid;
+  gap: 30px;
+  grid-template-columns: repeat(4, 255px);
+  grid-template-rows: repeat(2, 235px);
+}
+.tours__item:nth-child(1) {
+  grid-column: 1/2;
+  grid-row: 1/4;
+}
+.tours__item:nth-child(4) {
+  grid-column: 2/4;
+  grid-row: 2/3;
+}
+.tours__top {
+  display: flex;
+  gap: 30px;
+}
+.tours__text {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 36px;
+  text-align: center;
+  color: #7A66CC;
+  position: absolute;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.tours__bottom {
+  position: relative;
+}
+.toursnext {
+  margin-bottom: 180px;
+}
+.toursnext__content {
+  position: relative;
+}
+.toursnext__item {
+  border-radius: 30px 0px;
+  background-color: #2F2B2B;
+  max-width: 350px;
+}
+.toursnext__info {
+  padding-left: 35px;
+}
+.toursnext__adress {
+  margin-top: 30px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 27px;
+  opacity: 0.5;
+}
+.toursnext__descr {
+  margin-top: 20px;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 27px;
+}
+.toursnext__buy {
+  display: flex;
+  align-items: center;
+  margin-top: 30px;
+  justify-content: space-between;
+}
+.toursnext__date {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 24px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  opacity: 0.5;
+}
+.toursnext__ticket {
+  padding: 18px 62px 18px 52px;
+  background: #7A66CC;
+  border-radius: 30px 0px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 24px;
+  text-transform: uppercase;
+}
+
+.swiper-button-prev {
+  transform: translate(-80px, 0);
+  width: 40px;
+  height: 60px;
+  border: 1px solid #FFFFFF;
+  border-radius: 10px 0px;
+  background-image: url(../img/prevBack.png);
+  background-size: cover;
+  background-position: center;
+}
+.swiper-button-prev::after {
+  content: "" !important;
+}
+
+.swiper-button-next {
+  transform: translate(80px, 0);
+  width: 40px;
+  height: 60px;
+  border: 1px solid #FFFFFF;
+  border-radius: 10px 0px;
+  background-image: url(../img/prevNext.png);
+  background-size: cover;
+  background-position: center;
+}
+.swiper-button-next::after {
+  content: "" !important;
+}
+
+.footer {
+  margin-bottom: 40px;
+}
+.footer__content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.footer__logo {
+  margin-bottom: 60px;
+}
+.footer__info {
+  display: flex;
+}
+.footer__artist {
+  display: flex;
+  flex-direction: column;
+  text-align: right;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 27px;
+  text-transform: uppercase;
+}
+.footer__descr {
+  margin-left: 30px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 27px;
+  text-transform: uppercase;
+}
+.footer__email {
+  display: flex;
+  flex-direction: column;
+}
+.footer__social {
+  margin-top: 70px;
+}
+.footer__rights {
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  opacity: 0.5;
+}
+
+.social {
+  display: flex;
+  gap: 30px;
+  margin-bottom: 100px;
+}
+.social__item {
+  width: 60px;
+  height: 60px;
+  background: #2C2C2C;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.social__area {
+  width: 44px;
+  height: 44px;
+  background: #7A66CC;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.social__area a {
+  display: flex;
+  align-items: center;
+}/*# sourceMappingURL=style.css.map */
