--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -196,7 +196,6 @@ li {
 
 
 .blog {
-    margin-bottom: 180px;
     display: flex;
     gap: 30px;
     // .blog__item
@@ -223,6 +222,7 @@ li {
 
 
 .album {
+    margin-top: 180px;
     margin-bottom: 240px;
     // .album__content
     display: flex;
