--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,10 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
+h1 {
+  margin: 0;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -43,6 +47,12 @@ li {
   display: flex;
   align-items: center;
   padding: 30px 0;
+}
+.header__burger {
+  display: none;
+}
+.header__mobile {
+  display: none;
 }
 .header__menu {
   margin-left: 65px;
@@ -118,6 +128,7 @@ li {
   background-image: url("../img/play.svg");
   height: 25px;
   width: 25px;
+  background-repeat: no-repeat;
 }
 .preview__pause {
   background-image: url("../img/pause.svg");
@@ -372,7 +383,7 @@ li {
 }
 .tours__item:nth-child(1) {
   grid-column: 1/2;
-  grid-row: 1/4;
+  grid-row: 1/3;
 }
 .tours__item:nth-child(4) {
   grid-column: 2/4;
