--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,8 +6,12 @@ body {
     width: 100%;
     color: white;
     font-family: 'Poppins', sans-serif;
+    
 }
 
+h1 {
+    margin: 0;
+}
 *{
     box-sizing: border-box;
 }
@@ -49,7 +53,12 @@ li {
     &__logo {
 
     }
-
+    &__burger {
+        display: none;
+    }
+    &__mobile {
+        display: none;
+    }
     // .header__menu
 
     &__menu {
@@ -149,6 +158,7 @@ li {
         background-image: url("../img/play.svg");
         height: 25px;
         width: 25px;
+        background-repeat: no-repeat;
     }
     &__pause {
         background-image: url("../img/pause.svg");
@@ -533,7 +543,7 @@ li {
     &__item{
         &:nth-child(1){
             grid-column: 1/2;
-            grid-row: 1/4;
+            grid-row: 1/3;
         }
         &:nth-child(4){
             grid-column: 2/4;
