--- a/assets/css/adaptive.scss
+++ b/assets/css/adaptive.scss
@@ -519,6 +519,13 @@
     .media__info{
         padding: 10px 15px;
     }
+    .media__image {
+        padding: 10px 15px;
+        img {
+            width: 100%;
+        }
+        margin-bottom: 20px;
+    }
 
     .preview__name {
         font-size: 60px;
@@ -526,6 +533,10 @@
     }
     .footer__title {
         display: none;
+    }
+
+    .tours__item {
+        display: flex;
     }
 }
 
