--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,814 +1,11 @@
-body {
-    margin: 0;
-    padding: 0;
-    background-color: #1C1B21;
-    height: 100%;
-    width: 100%;
-    color: white;
-    font-family: 'Poppins', sans-serif;
-    
-}
-
-h1 {
-    margin: 0;
-}
-*{
-    box-sizing: border-box;
-}
-
-a {
-    text-decoration: none;
-    color: white;
-    outline: none;
-}
-
-p {
-    margin: 0;
-}
-
-li {
-    list-style: none;
-}
-
-.container {
-    max-width: 1130px;
-    margin: 0 auto;
-    padding: 0 15px;
-    
-}
-
-.preview {
-    background-image: url("../img/preview_back.png");
-    font-size: 18px;
-    background-size: cover;
-    font-weight: bold;
-}
-
-.header {
-    display: flex;
-    align-items: center;
-    padding: 30px 0;
-    // .header__logo
-
-    &__logo {
-
-    }
-    &__burger {
-        display: none;
-    }
-    &__mobile {
-        display: none;
-    }
-    // .header__menu
-
-    &__menu {
-        margin-left: 65px;
-    }
-
-    // .header__ul
-
-    &__ul {
-        display: flex;
-        gap: 55px;
-    }
-
-    // .header__item
-
-    &__item {
-    }
-
-    // .header__link
-
-    &__link {
-    }
-}
-
-
-
-.preview {
-
-    // .preview__text
-
-    &__text {
-        margin-top: 320px;
-        font-family: 'Inter', sans-serif;
-        padding-bottom: 130px;
-    }
-
-    // .preview__title
-
-    &__title {
-        font-weight: bold;
-        font-size: 48px;
-        margin-bottom: 10px;
-        animation: typewriter steps(30) 3s 1 normal both;
-        overflow: hidden;
-        white-space: nowrap;
-        animation-delay: 0.5s;
-    }
-
-    
-    // .preview__name
-
-    &__name {
-        font-size: 100px;
-        margin-bottom: 50px;
-        -webkit-text-stroke: 1px #fff;
-        color: transparent;
-        line-height: 150px;
-        overflow: hidden;
-        white-space: nowrap;
-        animation: typewriter steps(30) 1.5s 1 normal both, ;
-        animation-delay: 0.5s;
-    }
-
-    @keyframes typewriter {
-        from {
-            width: 0;
-        }
-        to {
-            width: 100%;
-        }
-    }
-
-    // .preview__player
-
-    &__player {
-       display: flex;
-       align-items: center;
-       overflow: hidden;
-       animation: typewriter steps(50) 0.5s 1 normal both, ;
-        animation-delay: 0.5s;
-
-    }
-
-    &__wrapper {
-        height: 20px;
-        width: 100%;
-        display: flex;
-        margin: 0 45px;
-        align-items: center;
-    }
-
-    // .preview__play
-
-    &__play {
-        display: flex;
-        align-items: center;
-        background-image: url("../img/play.svg");
-        height: 25px;
-        width: 25px;
-        background-repeat: no-repeat;
-    }
-    &__pause {
-        background-image: url("../img/pause.svg");
-        background-repeat: no-repeat;
-    }
-
-    // .preview__line
-
-    &__line {
-        position: relative;
-        width: 100%;
-        
-        height: 2px;
-        background-color: white;
-    }
-
-    &__time {
-        min-width: 110px;
-        display: flex;
-    }
-    &__duration {
-        margin-left: 5px;
-    }
-}
-.fully {
-
-    // .fully__line
-
-    &__line {
-        height: 2px;
-        background-color: #7A66CC;
-        position: absolute;
-        width: 30%;
-        &::before{
-            content: '';
-            height: 20px;
-            background-color: #7A66CC;
-            width: 2px;
-            position: absolute;
-            right: 0;
-            top: -9px;
-        }
-    }
-}
-
-
-.blog {
-    display: flex;
-    gap: 30px;
-    // .blog__item
-
-    &__item {
-        position: relative;
-        max-width: 350px;
-        border-radius: 20px 0px;
-    }
-
-    &__text {
-        position: absolute;
-        bottom: 0;
-        padding: 20px;
-        background: #7A66CC;
-        opacity: 0.7;
-        border-radius: 20px 0px;
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 24px;
-        width: 100%;
-    }
-}
-
-
-.album {
-    margin-top: 180px;
-    margin-bottom: 240px;
-    // .album__content
-    display: flex;
-    &__content {
-        margin-right: 130px;
-    }
-
-    // .album__title
-
-    &__title {
-        display: flex;
-        align-items: center;
-        margin-bottom: 60px;
-    }
-
-    // .album__logo
-
-    &__logo {
-        display: flex;
-        align-items: center;
-        margin-right: 30px;
-        &__text {
-            font-weight: 700;
-            font-size: 48px;
-            line-height: 72px;
-        }
-    }
-
-    // .album__text
-
-    &__text {
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 24px;
-        opacity: 0.7;
-    }
-
-    // .album__points
-
-    &__points {
-        &__container {
-            margin-top: 60px;
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 30px;
-        }
-        
-    }
-
-    // .album__point
-
-    &__point {
-        display: flex;
-        align-items: center;
-    }
-
-    // .album__images
-
-    &__images {
-        position: relative;
-    }
-
-    // .album__image
-
-    &__image {
-        position: relative;
-        &__front {
-            &::after{
-                content: '';
-                background-image: url("../img/album__img_2.png");
-                width: 350px;
-                height: 400px;
-                position: absolute;
-                top: 66px;
-                left: 95px;
-                z-index: -1;
-            }
-            img {
-                transform: translate(-30px);
-                
-            }
-        }
-    }
-    &__container {
-        display: flex;
-    }
-}
-
-.point {
-    
-    // .point__logo
-
-    &__logo {
-        height: 30px;
-        width: 30px;
-        background: #7A66CC;
-        border-radius: 10px 0px;
-    }
-
-    // .point__text
-
-    &__text {
-        margin-left: 20px;
-    }
-}
-
-.media {
-    margin-bottom: 265px;
-    // .media__content
-    &__image {
-        position: absolute;
-        right: 80px;
-        top: 50%;
-        transform: translate(0, -50%);
-    }
-
-
-    &__content {
-        position: relative;
-        border: 1px solid #FFFFFF;
-        border-radius: 30px 0px;
-        padding: 80px 50px;
-        display: flex;
-    }
-
-    // .media__text
-
-    &__text {
-        padding-bottom: 25px;
-        border-bottom: 1px solid #ffffffaf;
-        margin-bottom: 25px;
-        max-width: 520px;
-        
-    }
-
-    // .media__link
-
-    &__link {
-        font-weight: 700;
-        font-size: 18px;
-        line-height: 27px;
-        color: #7A66CC;
-    }
-}
-.container {
-}
-
-
-
-
-.nextmedia {
-    margin-bottom: 180px;
-    // .nextmedia__content
-
-    &__content {
-        display: flex;
-    }
-
-    // .nextmedia__left
-
-    &__left {
-        margin-right: 60px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    // .nextmedia__right
-
-    &__right {
-        width: 100%;
-    }
-    &__follow {
-        display: flex;
-        gap: 40px;
-        margin-top: 50px;
-    }
-    &__player {
-        width: 100%;
-        margin-top: 60px;
-    }
-    // .nextmedia__title
-
-    &__title {
-        display: flex;
-        align-items: center;
-    }
-
-    // .nextmedia__logo
-
-    &__logo {
-        margin-right: 30px;
-    }
-
-    // .nextmedia__text
-
-    &__text {
-        display: flex;
-    }
-}
-.container {
-}
-.st {
-
-    // .st__area
-
-    &__area {
-        width: 510px;
-        height: 510px;
-        background: #4f39a7;
-        border-radius: 50%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        z-index: -2;
-    }
-}
-.nd {
-
-    // .nd__area
-
-    &__area {
-        width: 472.22px;
-        height: 472.22px;
-        background: #937fe285;
-        border-radius: 50%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        z-index: 2;
-    }
-}
-.rd {
-
-    // .rd__area
-
-    &__area {
-        opacity: 1;
-    }
-}
-.preview {
-
-    // .preview__player
-
-    &__player {
-    }
-
-    // .preview__play
-
-    &__play {
-    }
-
-    // .preview__line
-
-    &__line {
-    }
-
-    // .preview__time
-
-    &__time {
-    }
-}
-.fully {
-
-    // .fully__line
-
-    &__line {
-    }
-}
-.tracks {
-    margin-top: 50px;
-    // .tracks__item
-
-    &__item {
-        display: flex;
-        align-items: flex-end;
-        margin-bottom: 20px;
-    }
-
-    span {
-        font-weight: 700;
-        font-size: 14px;
-        line-height: 21px;
-        opacity: 0.5;
-    }
-
-    // .tracks__name
-
-    &__name {
-        margin-left: 20px;
-    }
-}
-
-.follow {
-    font-weight: 600;
-    font-size: 24px;
-    line-height: 36px;
-}
-
-.tours {
-    margin-bottom: 180px;
-    &__content {
-        display: grid;
-        gap: 30px;
-        grid-template-columns: repeat(4,255px);
-        grid-template-rows: repeat(2,235px);
-    }
-    &__item{
-        &:nth-child(1){
-            grid-column: 1/2;
-            grid-row: 1/3;
-        }
-        &:nth-child(4){
-            grid-column: 2/4;
-            grid-row: 2/3;
-        }
-    }
-    // .tours__left
-
-    &__left {
-    }
-
-    // .tours__mid
-
-    &__mid {
-    }
-
-    // .tours__top
-
-    &__top {
-        display: flex;
-        gap: 30px;
-    }
-    &__text {
-
-        font-weight: 700;
-        font-size: 24px;
-        line-height: 36px;
-        text-align: center;
-        color: #7A66CC;
-        position: absolute;
-        text-align: center;
-        width: 100%;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-    }
-
-    // .tours__bottom
-
-    &__bottom {
-        
-        position: relative;
-    }
-
-    // .tours__right
-
-    &__right {
-    }
-}
-
-
-.toursnext {
-    margin-bottom: 180px;
-    // .toursnext__content
-
-    &__content {
-        position: relative;
-    }
-
-    // .toursnext__item
-
-    &__item {
-        border-radius: 30px 0px;
-        background-color: #2F2B2B;
-        max-width: 350px;
-    }
-
-    // .toursnext__image
-
-    &__image {
-    }
-
-    // .toursnext__info
-
-    &__info {
-        padding-left: 35px;
-    }
-
-    // .toursnext__adress
-
-    &__adress {
-        margin-top: 30px;
-        font-weight: 700;
-        font-size: 18px;
-        line-height: 27px;
-        opacity: 0.5;
-    }
-
-    // .toursnext__descr
-
-    &__descr {
-        margin-top: 20px;
-        font-weight: 500;
-        font-size: 18px;
-        line-height: 27px;
-    }
-
-    // .toursnext__buy
-
-    &__buy {
-        display: flex;
-        align-items: center;
-        margin-top: 30px;
-        justify-content: space-between;
-    }
-
-    // .toursnext__date
-
-    &__date {
-        font-weight: 700;
-        font-size: 16px;
-        line-height: 24px;
-        text-transform: uppercase;
-        color: #FFFFFF;
-        opacity: 0.5;
-    }
-
-    // .toursnext__ticket
-
-    &__ticket {
-        padding: 18px 62px 18px 52px;
-        background: #7A66CC;
-        border-radius: 30px 0px;
-        font-weight: 700;
-        font-size: 16px;
-        line-height: 24px;
-        text-transform: uppercase;
-    }
-}
-.swiper-button-prev {
-    transform: translate(-80px, 0);
-    width: 40px;
-    height: 60px;
-    border: 1px solid #FFFFFF;
-    border-radius: 10px 0px;
-    background-image: url(../img/prevBack.png);
-    background-size: cover;
-    background-position: center;
-    &::after{
-        content: ''!important;
-
-    }
-}
-.swiper-button-next {
-    transform: translate(80px, 0);
-    width: 40px;
-    height: 60px;
-    border: 1px solid #FFFFFF;
-    border-radius: 10px 0px;
-    background-image: url(../img/prevNext.png);
-    background-size: cover;
-    background-position: center;
-    &::after{
-        content: ''!important;
-
-    }
-}
-
-
-.footer {
-    margin-bottom: 40px;
-    // .footer__content
-
-    &__content {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    // .footer__logo
-
-    &__logo {
-        margin-bottom: 60px;
-    }
-
-    // .footer__info
-
-    &__info {
-        display: flex;
-    }
-
-    // .footer__artist
-
-    &__artist {
-        display: flex;
-        flex-direction: column;
-        text-align: right;
-        font-weight: 600;
-        font-size: 18px;
-        line-height: 27px;
-        text-transform: uppercase;
-    }
-
-    // .footer__title
-
-    &__title {
-
-    }
-
-    &__descr{
-        margin-left: 30px;
-        font-weight: 400;
-        font-size: 18px;
-        line-height: 27px;
-        text-transform: uppercase;
-    }
-    // .footer__email
-
-    &__email {
-        display: flex;
-        flex-direction: column;
-    }
-
-    // .footer__social
-
-    &__social {
-        margin-top: 70px;
-    }
-
-    // .footer__rights
-
-    &__rights {
-        font-weight: 400;
-        font-size: 13px;
-        line-height: 20px;
-        text-align: center;
-        text-transform: uppercase;
-        color: #FFFFFF;
-        opacity: 0.5;
-    }
-}
-.container {
-}
-.social {
-    display: flex;
-    gap: 30px;
-    margin-bottom: 100px;
-    // .social__item
-
-    &__item {
-        width: 60px;
-        height: 60px;
-        background: #2C2C2C;
-        border-radius: 50%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
-    // .social__area
-
-    &__area {
-        width: 44px;
-        height: 44px;
-        background: #7A66CC;
-        border-radius: 50%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        a {
-            display: flex;
-            align-items: center;
-        }
-    }
-}
+@import "./scss/global";
+@import "./scss/preview";
+@import "./scss/header";
+@import "./scss/album";
+@import "./scss/media";
+@import "./scss/nextmedia";
+@import "./scss/tours";
+@import "./scss/toursnext";
+@import "./scss/footer";
+@import "./scss/actionclasses"
 
