--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -730,7 +730,11 @@ li {
 }
 
 .rd__area {
+  width: 90%;
   opacity: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 @media (max-width: 1024px) {
   .rd__area {
@@ -755,6 +759,7 @@ li {
   display: flex;
   align-items: flex-end;
   margin-bottom: 20px;
+  cursor: pointer;
 }
 @media (max-width: 1024px) {
   .tracks__item {
@@ -781,6 +786,15 @@ li {
   .follow {
     font-size: 18px;
   }
+}
+
+.player__image {
+  width: 100%;
+  border-radius: 50%;
+}
+
+.tracks__play {
+  width: 35px;
 }
 
 .tours {
@@ -1052,4 +1066,34 @@ li {
 
 .body-hide {
   overflow: hidden;
+}
+
+.text_purple {
+  color: #7A66CC;
+  transition: 0.3s all ease;
+}
+
+.image__rotate {
+  -webkit-animation: rotate 0.5s infinite linear;
+          animation: rotate 0.5s infinite linear;
+  -webkit-animation-duration: 10s;
+          animation-duration: 10s;
+}
+
+@-webkit-keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }/*# sourceMappingURL=style.css.map */
