--- a/assets/css/scss/_actionclasses.scss
+++ b/assets/css/scss/_actionclasses.scss
@@ -9,13 +9,20 @@
 .image__rotate {
     animation: rotate 0.5s infinite linear;
     animation-duration: 10s;
+    transition: 1s all ease;
 }   
 
 @keyframes rotate {
     0%{
         transform: rotate(0deg);
+        transition: 1s all ease;
     }
     100% {
         transform: rotate(360deg);
+        transition: 1s all ease;
     }
+}
+
+.image__rotate-reverse {
+    transition: 1s all ease;
 }
