fix player image

--- a/assets/css/scss/_nextmedia.scss
+++ b/assets/css/scss/_nextmedia.scss
@@ -155,7 +155,7 @@
 .player__image {
     width: 100%;
     border-radius: 50%;
-    transition: 1s all ease;
+    transition: 0.5s;
 }
 .tracks__play {
     width: 35px;
