--- a/assets/css/scss/_album.scss
+++ b/assets/css/scss/_album.scss
@@ -22,6 +22,9 @@
     }
     &__title {
         display: flex;
+        width: 0;
+        overflow: hidden;
+        white-space: nowrap;
         align-items: center;
         margin-bottom: 60px;
         @media (max-width: 440px){
@@ -43,10 +46,11 @@
 
     }
     &__text {
+        transition: 2s;
         font-weight: 400;
         font-size: 16px;
         line-height: 24px;
-        opacity: 0.7;
+        opacity: 0;
         @media (max-width: 1024px){
             font-size: 20px;
             line-height: 45px;
@@ -79,6 +83,8 @@
     &__point {
         display: flex;
         align-items: center;
+        opacity: 0;
+        transition: 2s;
     }
     &__images {
         position: relative;
@@ -89,19 +95,20 @@
     &__image {
         position: relative;
         &__front {
+
             &::after{
                 content: '';
                 background-image: url("../img/album__img_2.png");
                 width: 350px;
                 height: 400px;
                 position: absolute;
-                top: 66px;
+                top: 50px;
                 left: 95px;
                 z-index: -1;
             }
             img {
-                transform: translate(-30px);
                 
+                transform: translate(95px, 50px);
             }
         }
         @media (max-width: 1380px){
