--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -422,6 +422,9 @@ li {
 }
 .album__title {
   display: flex;
+  width: 0;
+  overflow: hidden;
+  white-space: nowrap;
   align-items: center;
   margin-bottom: 60px;
 }
@@ -446,10 +449,11 @@ li {
   }
 }
 .album__text {
+  transition: 2s;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-  opacity: 0.7;
+  opacity: 0;
 }
 @media (max-width: 1024px) {
   .album__text {
@@ -486,6 +490,8 @@ li {
 .album__point {
   display: flex;
   align-items: center;
+  opacity: 0;
+  transition: 2s;
 }
 .album__images {
   position: relative;
@@ -504,12 +510,12 @@ li {
   width: 350px;
   height: 400px;
   position: absolute;
-  top: 66px;
+  top: 50px;
   left: 95px;
   z-index: -1;
 }
 .album__image__front img {
-  transform: translate(-30px);
+  transform: translate(95px, 50px);
 }
 @media (max-width: 1380px) {
   .album__image img {
@@ -1101,4 +1107,8 @@ li {
     transform: rotate(360deg);
     transition: 1s all ease;
   }
+}
+.album__left {
+  transform: translate(-30px, 0) !important;
+  transition: 1s all ease;
 }/*# sourceMappingURL=style.css.map */
