--- a/assets/css/scss/_media.scss
+++ b/assets/css/scss/_media.scss
@@ -4,13 +4,20 @@
         position: absolute;
         right: 80px;
         top: 50%;
-        transform: translate(0, -50%);
+        transition: 2s all ease;
+        opacity: 0;
+        transform: translate(1000px, -50%);
+        @media (max-width: 1200px) {
+            opacity: 1;
+            transform: translate(0, -50%);
+        }
         @media (max-width: 1024px){
             position: static;
             transform: none;
             margin-bottom: 50px;
         }
         @media (max-width: 620px){
+            transform: none;
             padding: 10px 15px;
             margin-bottom: 20px;
             img {
@@ -27,6 +34,13 @@
         border-radius: 30px 0px;
         padding: 80px 50px;
         display: flex;
+        transform: translateX(-800px);
+        transition: 1s all ease;
+        opacity: 0;
+        @media (max-width: 1200px) {
+            opacity: 1;
+            transform: translate(0) !important;
+        }
         @media (max-width: 1024px){
             flex-direction: column-reverse;
             align-items: center;
