--- a/assets/css/scss/_nextmedia.scss
+++ b/assets/css/scss/_nextmedia.scss
@@ -1,4 +1,5 @@
 .nextmedia {
+    overflow: hidden;
     margin-bottom: 180px;
     &__content {
         display: flex;
@@ -11,6 +12,9 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        opacity: 0;
+        transition: 1s all ease;
+        transform: translateX(-800px);
         @media (max-width: 1024px){
             margin-right: 30px;
         }
@@ -22,6 +26,9 @@
     }
     &__right {
         width: 100%;
+        transform: translateX(800px);
+        opacity: 0;
+        transition: 1s all ease;
     }
     &__follow {
         display: flex;
